prevent header from covering linked elements

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -40,6 +40,10 @@
   to   { opacity: 1; }
 }
 
+html {
+  scroll-padding-top: 2.5rem;
+}
+
 /* Containers */
 
 body {
